--- a/style.css
+++ b/style.css
@@ -191,4 +191,9 @@ button:hover{
         padding: 12px 25px;
         font-size: 1rem;
     }
+
+    #credit{
+    margin-top: 30px;
+    font-size: 1rem;
+    }
 }
